--- a/FCC/Responsive Web design/Technical Documentation Page/Index.html
+++ b/FCC/Responsive Web design/Technical Documentation Page/Index.html
@@ -287,7 +287,7 @@
               <ul>
                 <li>Enable notifications <em>(Turn on/off notifications of any kind)</em></li>
                 <li>Private message <em>(When someone sends you a private message in chat)</em></li>
-                <li>Requested your location <em>(If set to OFF you won't be notified if someone requested your location)</em></li>
+                <li>Requested your location <em>(If set to OFF you won't be notified if someone has requested your location)</em></li>
                 <li>Friends location update <em>(By default is set to OFF and if you set to ON you'll be notified about every new position of your friends. This option is useful in search actions when the position of a missing person is not so clear and you are waiting for a new position notification.)</em></li>
                 <li>New flights from friends <em>(If your friend publish his flight you'll be notified but not if he publish it privately)</em></li>
                 <li>New flights from a favorite site <em>(To select your favourite sites, visit <a href="#Paragliding_map">Paragliding map</a> menu)</em></li>
