Typo fixed and added internal link

--- a/FCC/Responsive Web design/Technical Documentation Page/Index.html
+++ b/FCC/Responsive Web design/Technical Documentation Page/Index.html
@@ -259,11 +259,11 @@
       <!--location sharing-->
       <section class="main-section" id="Location_sharing">
         <header ><h3>Location sharing</h3></header>
-        <article>s
+        <article>
           <p>Here is a list of people that have shared their location with you. You can also see how far away from your position they are. If you click on one of them you can view this person location, you can request his location over SMS as well if the data signal is very week and it's even possible to activate their GPS over SMS you send by click on "Send SMS to activate GPS" This option is very useful in emergency situations when person doesn't respond back for a while and their GPS is set on OFF. But <code class="note">NOTE!</code> To get persons location by SMS you still need some signal on their phone even if it's very week this option should work.</p>
-          <p style="background-color:rgba(223, 37, 37, 0.171)"><em>Please use SMS option only if there is no other option. So you don't necessarily drain pilots battery or because in some countries you could create additional cost to another person bill. How much the SMS cost in different corners of our world you should contact your mobile provider. But you have an option to restrict SMS sending in</em> <code>Settings > Location settings</code></p>
+          <p style="background-color:rgba(223, 37, 37, 0.171)"><em>Please use SMS option only if there is no other option. So you don't necessarily drain pilots battery or because in some countries you could create additional cost to another person bill. How much the SMS cost in different corners of our world you should contact your mobile provider. But you have an option to restrict SMS sending in</em> <code><a href="#Settings">Settings</a> > Location settings</code></p>
           <p>You can also select only 3 or 6 people to view them on the map. Or simply show all off them. But <code class="note">NOTE!</code> When you request person location, the person that their location is requested is notified that you request their location. <strong>So no one can view where you are without you being notified</strong>. If any of the persons you share location with is abusing this option you can easily stop sharing location with them. in <a href="#Friends">Friends</a> menu.</p>
-          <p>Of course, you can also set some specific setting about your location sharing in <a href="#Settings">Settings</a> menu under submenu "Location settings".</p>
+          <p>Of course, you can also set some specific setting about your location sharing in <a href="#Settings">Settings</a> menu in submenu "Location settings".</p>
         </article>
       </section>
       <!--END location sharing-->
